--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,14 @@ li {
   width: 150px;
   margin: 0 auto;
 }
+#contact .output-list ul{
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 150px;
+  margin: 0 auto;
+}
 
 #contact .contact-list li {
   display: flex;
@@ -445,7 +453,9 @@ li {
 #contact .contact-list li a {
   color: #333;
 }
-
+#contact .output-list li img{
+  width: 100px;
+}
 #contact .contact-list li img {
   width: 50px;
 }
