ページ遷移の設定

--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ li {
   width: 150px;
   margin: 0 auto;
 }
-#contact .output-list ul {
+#output .output-list ul {
   display: flex;
   
   flex-wrap: nowrap;
@@ -444,7 +444,7 @@ li {
   margin: 0 auto;
   margin-bottom: 40px;
 }
-#contact .output-list li {
+#output .output-list li {
   display: flex;
   align-items: center;
   text-align: center;
